--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
+    "babel-eslint": "^10.1.0",
+    "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.22.0",
+    "framer-motion": "^7.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.4",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
