--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.4",
+    "recoil": "^0.7.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
